Fix form content overflowing when inspecting the DOM
Cropping the image and removing height:100vh from form and image
containers worked. Any other solution resulted in overflow of either image or form.
Using min-height:100vh on these containers resulted in a vertical
scrollbar so even that was not a good solution.

--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@
 
 #image-container {
     width: 40%;
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,7 +40,6 @@
 
 #form-container {
     width: 60%;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
